--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,18 +34,18 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/buttom_selector"
+        app:layout_constraintEnd_toStartOf="@id/buttonSelector"
         app:layout_constraintTop_toBottomOf="@id/textButton"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/button_text"
         android:onClick="onClick"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/black"
         android:background="@color/teal_200"/>
 
     <Button
-        android:id="@+id/buttom_selector"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:id="@+id/buttonSelector"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
         app:layout_constraintStart_toEndOf="@id/buttonFor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
